syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "pkg/proto";

message RegistrationRequest {
  string login = 1;
  string password = 2;
}

message RegistrationResponse {
  string encrypted_session_key = 1;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string encrypted_session_key = 1;
}

message SetEntryRequest {
  string type_id = 1;
  string name = 2;
  string metadata = 3;
  bytes data = 4;
}

message SetEntryResponse {}

message GetEntryRequest {
  string entry_id = 1;
}

message GetEntryResponse {
  string entry_id = 1;
  string type_id = 2;
  string name = 3;
  string metadata = 4;
  bytes data = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetAllEntriesRequest {}

message GetAllEntriesResponse {
  message Entry {
    string entry_id = 1;
    string type_id = 2;
    string name = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
  }

  repeated Entry entries = 1;
}

message DeleteEntryRequest {
  string entry_id = 1;
}

message DeleteEntryResponse {}

message GetAllTypesRequest {}

message GetAllTypesResponse {
  message Type {
    string type_id = 1;
    string name = 2;
  }

  repeated Type types = 1;
}


service App {
  rpc Registration(RegistrationRequest) returns (RegistrationResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc SetEntry(SetEntryRequest) returns (SetEntryResponse);
  rpc GetEntry(GetEntryRequest) returns (GetEntryResponse);
  rpc GetAllEntries(GetAllEntriesRequest) returns (GetAllEntriesResponse);
  rpc GetAllTypes(GetAllTypesRequest) returns (GetAllTypesResponse);
  rpc DeleteEntry(DeleteEntryRequest) returns (DeleteEntryResponse);
}